--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 ---
 
 <div class="hero">
-    <div class="hero__bg"></div>
+    <canvas class="hero__bg" id="canvas"></canvas>
     <div class="hero__txt">
         <h1>ziris</h1>
     </div>
