--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <div class="hero">
     <canvas class="hero__bg" id="canvas"></canvas>
     <div class="hero__txt">
-        <h1>ziris</h1>
+        <h1>Hello world</h1>
     </div>
 </div>
