--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 ---
 
-<div class="hero">
-    <canvas class="hero__bg" id="canvas"></canvas>
-    <div class="hero__txt">
-        <h1>jij kan goede foto’s maken. zelfs met je mobiel</h1>
+<section class="container full-center">
+    <div class="campaign">
+        <h1 class="campaign__title">jij kan goede foto’s maken. zelfs met je mobiel</h1>
+        <p class="campaign__description">door bij mij een cursus te volgen leer je waarom.</p>
     </div>
-</div>
+</section>
