--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 ---
 ---
 
-<section class="container full-center">
-    <div class="campaign">
-        <h1 class="campaign__title">jij kan goede foto’s maken. zelfs met je mobiel</h1>
-        <p class="campaign__description">door bij mij een cursus te volgen leer je waarom.</p>
+<section class="intro pb-6 pb-10-sm">
+    <div class="container mb-6 mb-10-sm">
+        <header class="section-header">
+            <h1 class="section-header__title">jij kan goede foto’s maken. zelfs met je mobiel</h1>
+            <p class="section-header__description">door bij mij een cursus te volgen leer je waarom.</p>
+        </header>
     </div>
+    <figure>
+        <img class="w-100" src="/assets/img/girls.jpg" />
+    </figure>
 </section>
