add section art and discover scroll indicator

--- a/index.html
+++ b/index.html
@@ -5,10 +5,35 @@ body: bg-brand
 <section class="intro">
     <div class="intro__bg"></div>
     <header class="section-header intro__header">
-        <h1 class="section-header__title">jij kan goede foto’s maken. zelfs met je mobiel</h1>
-        <p class="section-header__description">door bij mij een cursus te volgen leer je waarom.</p>
+        <h1 class="section-header__title">
+            jij kan goede foto’s maken. zelfs met je mobiel
+        </h1>
+        <p class="section-header__description">
+            door bij mij een cursus te volgen leer je waarom.
+        </p>
     </header>
     <figure class="intro__img-container">
         <img class="intro__img" src="/assets/img/girls.jpg" />
     </figure>
+    <div class="discover">
+        <div class="discover__txt">ontdek meer</div>
+        <div class="discover__line"></div>
+    </div>
+</section>
+
+<section class="art">
+    <div class="container">
+        <div class="art__grid">
+            <header class="section-header order-last-md">
+                <div class="thick-line"></div>
+                <h2 class="section-header__title section-header__title--small mxw-550">
+                    een combinatie van kunstgeschiedenis en fotografie
+                </h2>
+                <p class="section-header__description mxw-700">
+                    zorgt ervoor dat je anders gaat kijken.
+                </p>
+            </header>
+            <img class="art__img" src="/assets/img/art.jpg" />
+        </div>
+    </div>
 </section>
