--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@ body: bg-brand
 
 <section class="intro">
     <div class="intro__bg"></div>
-    <header class="section-header intro__header">
-        <h1 class="section-header__title">
-            jij kan goede foto’s maken. zelfs met je mobiel
-        </h1>
-        <p class="section-header__description">
-            door bij mij een cursus te volgen leer je waarom.
-        </p>
-    </header>
+    <div class="container intro__container">
+        <header class="section-header">
+            <h1 class="section-header__title">
+                jij kan goede foto’s maken. zelfs met je mobiel
+            </h1>
+            <p class="section-header__description">
+                door bij mij een cursus te volgen leer je waarom.
+            </p>
+        </header>
+    </div>
     <figure class="intro__img-container">
         <img class="intro__img" src="/assets/img/girls.jpg" />
     </figure>
@@ -25,7 +27,7 @@ body: bg-brand
     <div class="container">
         <div class="art__grid">
             <header class="section-header order-last-md">
-                <div class="thick-line"></div>
+                <div class="thick-line hidden-xs hidden-sm"></div>
                 <h2 class="section-header__title section-header__title--small mxw-550">
                     een combinatie van kunstgeschiedenis en fotografie
                 </h2>
@@ -35,5 +37,19 @@ body: bg-brand
             </header>
             <img class="art__img" src="/assets/img/art.jpg" />
         </div>
+    </div>
+</section>
+
+<section class="pattern">
+    <div class="container pattern__container">
+        <header class="section-header">
+            <h2 class="section-header__title section-header__title--small-sm">
+                aangeleerde kijkpatronen herkennen en doorbreken
+            </h2>
+            <p class="section-header__description mxw-500 mb-9">
+                helpt je om op een meer creatieve en bewuste manier te fotograferen.
+            </p>
+            <a href="/cursussen" class="button button--l button--white">bekijk cursussen</a>
+        </header>
     </div>
 </section>
