--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body: bg-brand
 </section>
 
 <section class="art">
-    <div class="container">
+    <div class="container container--small">
         <div class="art__grid">
             <header class="section-header order-last-md">
                 <div class="thick-line hidden-xs hidden-sm"></div>
@@ -41,6 +41,7 @@ body: bg-brand
 </section>
 
 <section class="pattern">
+    <div class="pattern__bg"></div>
     <div class="container pattern__container">
         <header class="section-header">
             <h2 class="section-header__title section-header__title--small-sm">
@@ -51,5 +52,30 @@ body: bg-brand
             </p>
             <a href="/cursussen" class="button button--l button--white">bekijk cursussen</a>
         </header>
+    </div>
+</section>
+
+<section class="proof">
+    <div class="container container--small">
+        <div class="proof__grid">
+            <header class="section-header">
+                <div class="thick-line hidden-xs hidden-sm"></div>
+                <h2 class="section-header__title section-header__title--small mxw-350">
+                    echte cursisten schreven dit
+                </h2>
+            </header>
+            <div>
+            {% for member in site.data.app.members %}
+            <div class="member">
+                <img class="member__img" src="/assets/img/{{ member.img }}.jpg" />
+                <div class="member__txt">
+                    <h3 class="member__name">{{ member.name }}</h3>
+                    <p class="member__profession">{{ member.profession }}</p>
+                    <p class="member__quote">“{{ member.quote }}”</p>
+                </div>
+            </div>
+            {% endfor %}
+            </div>
+        </div>
     </div>
 </section>
