--- a/cursussen.html
+++ b/cursussen.html
@@ -16,7 +16,7 @@ header: header--white
                     <img class="tile__img" src="/assets/img/{{ course.img }}" />
                     <h3 class="tile__title">{{ course.title }}</h3>
                     <div class="tile__amount">{{ course.amount }}<div>
-                    <p class="tile__description">{{ course.excerpt }}</p>
+                    <p class="tile__description">{{ course.description }}</p>
                     <div class="tile__price">{{ course.price }}</div>
                 </li>
                 {% endfor %}
