#fix member list

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body: bg-brand
                 </h2>
             </header>
             <div>
-                {% for member in site.data.app.members %}
+                {% for member in site.data.members %}
                 <div class="member">
                     <img class="member__img" src="/assets/img/{{ member.img }}.jpg" />
                     <div class="member__txt">
