--- a/cursussen.html
+++ b/cursussen.html
@@ -8,16 +8,20 @@ header: header--white
     </div>
     <div class="container courses__container">
         <section class="courses__category">
-            <h2 class="courses__category-title"></h2>
+            <h2 class="courses__category-title">volwassenen</h2>
             <ul class="courses__grid">
-                {% assign category = site.courses | where: 'category', 'volwassenen' %}
+                {% assign category = site.posts | where: 'category', 'volwassenen' %}
                 {% for course in category %}
                 <li class="tile">
-                    <img class="tile__img" src="/assets/img/{{ course.img }}" />
-                    <h3 class="tile__title">{{ course.title }}</h3>
-                    <div class="tile__amount">{{ course.amount }}<div>
-                    <p class="tile__description">{{ course.description }}</p>
-                    <div class="tile__price">{{ course.price }}</div>
+                    <a href="{{ course.url }}">
+                        <img class="tile__img" src="/assets/img/{{ course.img }}" />
+                        <div class="tile__txt">
+                            <h3 class="tile__title">{{ course.title }}</h3>
+                            <div class="tile__amount">{{ course.amount }}</div>
+                            <p class="tile__description">{{ course.description }}</p>
+                            <div class="tile__price">{{ course.price }}</div>
+                        </div>
+                    </a>
                 </li>
                 {% endfor %}
             </ul>
