--- a/cursussen.html
+++ b/cursussen.html
@@ -12,7 +12,7 @@ header: header--white
                 <h2 class="courses__category-title">volwassenen</h2>
                 <div class="courses__grid">
                     {% assign category = site.posts | where: 'category', 'volwassenen' %}
-                    {% for course in category %}
+                    {% for entry in category %}
                     {% include tile.html %}
                     {% endfor %}
                 </div>
