--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body: bg-brand
                     zorgt ervoor dat je anders gaat kijken.
                 </p>
             </header>
-            <img class="art__img" src="/assets/img/art.jpg" />
+            <img class="art__img" src="/assets/img/ollier.jpg" />
         </div>
     </div>
 </section>
@@ -58,9 +58,9 @@ body: bg-brand
 <section class="proof">
     <div class="container container--small">
         <div class="proof__grid">
-            <header class="section-header">
+            <header class="section-header mxw-350">
                 <div class="thick-line hidden-xs hidden-sm"></div>
-                <h2 class="section-header__title section-header__title--small mxw-350">
+                <h2 class="section-header__title section-header__title--small">
                     beoordelingen cursisten
                 </h2>
             </header>
