--- a/inschrijven.html
+++ b/inschrijven.html
@@ -5,18 +5,33 @@ title: inschrijven | ziris
 ---
 
 <section class="signup">
-    <div class="container container--small">
-        <header class="mxw-800 mh-auto">
+    <div class="container container--small mxw-800">
+        <header class="signup__header">
             <h1>
                 <div class="post-cta__label">schrijf je in voor:</div>
                 <div class="post-cta__title js-signup-title">cursus</div>
-                <p class="post-cta__description">
-                    Na het invullen van onderstaand formulier krijg je een persoonlijke bevestiging via email.
-                    De inschrijving is vrijblijvend en je kan altijd weer annuleren.
-                </p>
             </h1>
         </header>
-        <form>
+        <form action="/bedankt">
+            <fieldset class="signup__fieldset">
+                <div class="signup__formfield js-formfield">
+                    <label class="signup__label js-label" for="firstname">voornaam</label>
+                    <input class="signup__input js-input" id="firstname" placeholder="voornaam" type="text" required>
+                </div>
+                <div class="signup__formfield js-formfield">
+                    <label class="signup__label js-label" for="lastname">achternaam</label>
+                    <input class="signup__input js-input" id="lastname" placeholder="achternaam" type="text" required>
+                </div>
+                <div class="signup__formfield js-formfield">
+                    <label class="signup__label js-label" for="telephone">telefoonnummer</label>
+                    <input class="signup__input js-input" id="telephone" placeholder="telefoonnummer" type="number" required>
+                </div>
+                <div class="signup__formfield js-formfield">
+                    <label class="signup__label js-label" for="email">e-mailadres</label>
+                    <input class="signup__input js-input" id="email" placeholder="e-mailadres" type="email" required>
+                </div>
+            </fieldset>
+            <button class="button button--l" type="submit">inschrijving verzenden</button>
         </form>
     </div>
 </section>
