refined form | switched section colors

--- a/inschrijven.html
+++ b/inschrijven.html
@@ -8,8 +8,8 @@ title: inschrijven | ziris
     <div class="container container--small mxw-800">
         <header class="signup__header">
             <h1>
-                <div class="post-cta__label">schrijf je in voor:</div>
-                <div class="post-cta__title js-signup-title">cursus</div>
+                <div class="cta__label">schrijf je in voor:</div>
+                <div class="cta__title js-signup-title">cursus</div>
             </h1>
         </header>
         <form action="/bedankt">
@@ -23,8 +23,8 @@ title: inschrijven | ziris
                     <input class="signup__input js-input" id="lastname" placeholder="achternaam" type="text" required>
                 </div>
                 <div class="signup__formfield js-formfield">
-                    <label class="signup__label js-label" for="telephone">telefoonnummer</label>
-                    <input class="signup__input js-input" id="telephone" placeholder="telefoonnummer" type="number" required>
+                    <label class="signup__label js-label" for="phone">telefoonnummer</label>
+                    <input class="signup__input js-input" id="phone" placeholder="telefoonnummer" type="tel" required>
                 </div>
                 <div class="signup__formfield js-formfield">
                     <label class="signup__label js-label" for="email">e-mailadres</label>
