add thanks and netlify connection

--- a/inschrijven.html
+++ b/inschrijven.html
@@ -12,7 +12,7 @@ title: inschrijven | ziris
                 <div class="cta__title js-signup-title">cursus</div>
             </h1>
         </header>
-        <form action="/bedankt">
+        <form name="inschrijven" action="/bedankt" netlify>
             <fieldset class="signup__fieldset">
                 <div class="signup__formfield js-formfield">
                     <label class="signup__label js-label" for="firstname">voornaam</label>
