--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body: bg-brand
 </section>
 
 <section class="art">
-    <div class="container container--small">
+    <div class="container container--m">
         <div class="art__grid">
             <header class="section-header order-last-md">
                 <div class="thick-line hidden-xs hidden-sm"></div>
@@ -56,7 +56,7 @@ body: bg-brand
 </section>
 
 <section class="proof">
-    <div class="container container--small">
+    <div class="container container--m">
         <div class="proof__grid">
             <header class="section-header mxw-350">
                 <div class="thick-line hidden-xs hidden-sm"></div>
