--- a/inschrijven.html
+++ b/inschrijven.html
@@ -5,13 +5,15 @@ title: inschrijven | ziris
 ---
 
 <section class="signup">
-    <div class="container container--small mxw-800">
+    <div class="container container--s">
+
         <header class="signup__header">
-            <h1>
+            <h1 class="signup__title">
                 <div class="cta__label">schrijf je in voor:</div>
                 <div class="cta__title js-signup-title">cursus</div>
             </h1>
         </header>
+
         <form name="Inschrijvingen" action="/bedankt" netlify>
             <input class="js-course-title" type="hidden" name="CURSUS">
             <fieldset class="signup__fieldset">
@@ -34,5 +36,6 @@ title: inschrijven | ziris
             </fieldset>
             <button class="button button--l" type="submit">inschrijving verzenden</button>
         </form>
+        
     </div>
 </section>
