--- a/inschrijven.html
+++ b/inschrijven.html
@@ -15,7 +15,7 @@ title: inschrijven | ziris
         </header>
 
         <form name="Inschrijvingen" action="/bedankt" netlify>
-            <input class="js-course-title" type="hidden" name="CURSUS">
+            <input class="js-course-title" type="hidden" name="cursus">
             <fieldset class="signup__fieldset">
                 <div class="signup__formfield js-formfield">
                     <label class="signup__label js-label" for="firstname">voornaam</label>
@@ -36,6 +36,6 @@ title: inschrijven | ziris
             </fieldset>
             <button class="button button--l" type="submit">inschrijving verzenden</button>
         </form>
-        
+
     </div>
 </section>
