major update | different stuff

--- a/bedankt.html
+++ b/bedankt.html
@@ -7,9 +7,15 @@ title: bedankt voor je inschrijving | ziris
 <section class="thanks">
     <div class="container container--s">
         <header class="thanks__header">
-            <h1 class="thanks__title">bedankt voor je inschrijving!</h1>
+            <h1 class="thanks__title">
+                bedankt voor je inschrijving <span class="js-get-data" id="firstname"></span>!
+            </h1>
         </header>
+        <h2 class="f32 mb-2">ik ga het in orde maken</h2>
+        <p class="f18 f-grey-4 mb-8">
+            je ontvangt een bevestigingsmail op <span class="js-get-data f-brand fw-900" id="email"></span>.
+        </p>
         <p class="thanks__label">je hebt je ingeschreven voor:</p>
-        <p class="thanks__course-title js-signup-title">cursus</p>
+        <p class="thanks__course-title js-get-data" id="course-title">cursus</p>
     </div>
 </section>
