--- a/inschrijven.html
+++ b/inschrijven.html
@@ -7,32 +7,18 @@ title: inschrijven | ziris
 <section class="signup">
     <div class="container container--s">
 
-        <header class="signup__header">
-            <h1>
-                <div class="cta__label">schrijf je in voor:</div>
-                <div class="cta__title js-get-data" id="course-title">cursus</div>
-            </h1>
-        </header>
+        <h1 class="signup__header">
+            <div class="cta__label">schrijf je in voor:</div>
+            <div class="cta__title js-get-data" id="course-title">cursus</div>
+        </h1>
 
         <form name="Inschrijvingen" action="/bedankt" netlify>
             <input class="js-course-title-form" type="hidden" name="cursus">
             <fieldset class="signup__fieldset">
-                <div class="signup__formfield js-formfield">
-                    <label class="signup__label js-label" for="firstname">voornaam</label>
-                    <input class="signup__input js-input js-set-form-data" id="firstname" placeholder="voornaam" type="text" name="firstname" required>
-                </div>
-                <div class="signup__formfield js-formfield">
-                    <label class="signup__label js-label" for="lastname">achternaam</label>
-                    <input class="signup__input js-input js-set-form-data" id="lastname" placeholder="achternaam" type="text" name="lastname" required>
-                </div>
-                <div class="signup__formfield js-formfield">
-                    <label class="signup__label js-label" for="phone">telefoonnummer</label>
-                    <input class="signup__input js-input js-set-form-data" id="phone" placeholder="telefoonnummer" type="tel" name="phone" required>
-                </div>
-                <div class="signup__formfield js-formfield">
-                    <label class="signup__label js-label" for="email">e-mailadres</label>
-                    <input class="signup__input js-input js-set-form-data" id="email" placeholder="e-mailadres" type="email" name="email" required>
-                </div>
+                {% include formfield.html id='firstname' label='voornaam' type='text' required='required' %}
+                {% include formfield.html id='lastname' label='achternaam' type='text' required='required' %}
+                {% include formfield.html id='phone' label='telefoonnummer' type='tel' required='required' %}
+                {% include formfield.html id='email' label='e-mailadres' type='email' required='required' %}
             </fieldset>
             <button class="button button--l js-submit" type="submit">inschrijving verzenden</button>
         </form>
