--- a/inschrijven.html
+++ b/inschrijven.html
@@ -13,12 +13,20 @@ title: inschrijven | ziris
         </h1>
 
         <form name="Inschrijvingen" action="/bedankt" netlify>
-            <input class="js-course-title-form" type="hidden" name="cursus">
+            <fieldset class="signup__fieldset dn">
+                {% include formfield.html class='js-get-data' id='course-title' label='cursus' type='hidden' %}
+                {% include formfield.html class='js-get-data' id='course-amount' label='aantal' type='hidden' %}
+                {% include formfield.html class='js-get-data' id='course-price' label='prijs' type='hidden' %}
+                {% include formfield.html class='js-get-data' id='course-inc' label='inclusief' type='hidden' %}
+                {% include formfield.html class='js-get-data' id='course-start' label='start' type='hidden' %}
+                {% include formfield.html class='js-get-data' id='course-time' label='tijdstip' type='hidden' %}
+                {% include formfield.html class='js-get-data' id='course-location' label='locatie' type='hidden' %}
+            </fieldset>
             <fieldset class="signup__fieldset">
-                {% include formfield.html id='firstname' label='voornaam' type='text' required='required' %}
-                {% include formfield.html id='lastname' label='achternaam' type='text' required='required' %}
-                {% include formfield.html id='phone' label='telefoonnummer' type='tel' required='required' %}
-                {% include formfield.html id='email' label='e-mailadres' type='email' required='required' %}
+                {% include formfield.html class='js-set-data' id='firstname' label='voornaam' type='text' required='required' %}
+                {% include formfield.html class='js-set-data' id='lastname' label='achternaam' type='text' required='required' %}
+                {% include formfield.html class='js-set-data' id='phone' label='telefoonnummer' type='tel' required='required' %}
+                {% include formfield.html class='js-set-data' id='email' label='e-mailadres' type='email' required='required' %}
             </fieldset>
             <button class="button button--l js-submit" type="submit">inschrijving verzenden</button>
         </form>
