--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ body: bg-brand
     <div class="intro__bg"></div>
     <div class="container intro__container">
         <header class="section-header">
-            <h1 class="section-header__title">
-                jij kan goede foto’s maken. zelfs met je mobiel
+            <h1 class="f36 f80-sm lh-title mb-4 fw-900">
+                goede foto’s maken. zelfs met je mobiel
             </h1>
             <p class="section-header__description">
                 door bij mij een cursus te volgen leer je waarom.
@@ -15,7 +15,7 @@ body: bg-brand
         </header>
     </div>
     <figure class="intro__img-container">
-        <img class="intro__img" src="/assets/img/girls.jpg" />
+        <img class="intro__img" src="/assets/img/manray.jpg" />
     </figure>
     <div class="discover">
         <div class="discover__txt">ontdek meer</div>
@@ -29,13 +29,13 @@ body: bg-brand
             <header class="section-header order-last-md">
                 <div class="thick-line hidden-xs hidden-sm"></div>
                 <h2 class="section-header__title section-header__title--small mxw-550">
-                    een combinatie van kunstgeschiedenis en fotografie
+                    maak de klik tussen kunstgeschiedenis en fotografie
                 </h2>
                 <p class="section-header__description mxw-700">
-                    zorgt ervoor dat je anders gaat kijken.
+                    en je zal anders leren kijken.
                 </p>
             </header>
-            <img class="art__img" src="/assets/img/ollier.jpg" />
+            <img class="art__img" src="/assets/img/iwata.jpg" />
         </div>
     </div>
 </section>
