--- a/contact.html
+++ b/contact.html
@@ -5,3 +5,11 @@ no-footer: true
 ---
 
 <div class="map a a-fi a-del-500" id="js-map"></div>
+<div class="map__controls">
+    <div class="map__zoom js-zoom-in">
+        <span>+</span>
+    </div>
+    <div class="map__zoom js-zoom-out">
+        <span>–</span>
+    </div>
+</div>
