edit map | contact page

--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,23 @@ no-footer: true
 <div class="map a a-fi a-del-500">
     <div class="map__container" id="js-map"></div>
 </div>
+
 <div class="map__controls">
     <div class="map__zoom js-zoom-in">
         <span class="pos-r top-min-2px">+</span>
     </div>
     <div class="map__zoom js-zoom-out">
         <span>–</span>
+    </div>
+</div>
+
+<div class="contact">
+    <div class="contact__container">
+        <h1 class="fw-900 f24 f32-sm lh-title mb-1">ziris | kunst en fotografie</h1>
+        <p class="f14 f18-sm f-grey-5 mb-2">buurthuis de Boog, Gambiadreef 60, Utrecht</p>
+        <ul class="f20-sm">
+            <li class="dib"><a href="mailto:info@ziris.nl" class="contact__link">info@ziris.nl</a></li>
+            <li class="dib ml-2">06 4110 2948</li>
+        </ul>
     </div>
 </div>
