--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@ no-footer: true
 
 <div class="contact">
     <div class="contact__container">
-        <h1 class="fw-900 f24 f32-sm lh-title mb-1">ziris | kunst en fotografie</h1>
+        <h1 class="contact__title">ziris | kunst en fotografie</h1>
         <p class="f14 f18-sm f-grey-5 mb-2">buurthuis de Boog, Gambiadreef 60, Utrecht</p>
         <ul class="f20-sm">
             <li class="dib"><a href="mailto:info@ziris.nl" class="contact__link">info@ziris.nl</a></li>
