update img | add home.yml

--- a/bedankt.html
+++ b/bedankt.html
@@ -11,6 +11,10 @@ title: bedankt voor je inschrijving | ziris
                 Bedankt voor je inschrijving <span class="js-get-data" id="firstname"></span>!
             </h1>
         </header>
-        <p class="f20 f24-sm f-grey-4">Ik ga het in orde maken. Je ontvangt een bevestigingmail op <span class="f-brand fw-900 js-get-data" id="email"></span>. Het kan zijn dat deze mail in je spambox terecht komt.</p>
+        <p class="f20 f24-sm f-grey-4">
+            Ik ga het in orde maken. Je ontvangt een bevestigingmail op
+            <span class="f-brand fw-900 js-get-data" id="email"></span>.
+            Het kan zijn dat deze mail in je spambox terecht komt.
+        </p>
     </div>
 </section>
