update img title | copy

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body: bg-brand
         </header>
     </div>
     <figure class="intro__img-container">
-        <img class="intro__img" src="/assets/img/manray.jpg" />
+        <img class="intro__img" src="/assets/img/{{ site.data.home.intro.img }}" />
     </figure>
     <div class="discover">
         <div class="discover__txt">{{ site.data.home.intro.discover }}</div>
