--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body: bg-brand
     <div class="pattern__bg"></div>
     <div class="container pattern__container">
         <header class="section-header">
-            <h2 class="section-header__title section-header__title--small-sm">
+            <h2 class="f36 f48-sm f72-md lh-title mb-4 fw-900">
                 {{ site.data.home.pattern.title }}
             </h2>
             <p class="section-header__description mxw-500 mb-6">
