add data file for contact page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body: bg-brand
             <figcaption class="intro__figcaption">{{ site.data.home.intro.img.caption }}</figcaption>
         </div>
     </figure>
-    <div class="discover js-discover">
+    <div class="discover tr-750 js-discover">
         <div class="discover__txt">{{ site.data.home.intro.discover }}</div>
         <div class="discover__line"></div>
     </div>
