--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,15 @@ no-footer: true
 
 <div class="contact">
     <div class="contact__container">
-        <h1 class="contact__title">ziris | kunst en fotografie</h1>
-        <p class="f14 f18-sm f-grey-5 mb-2">buurthuis de Boog, Gambiadreef 60, Utrecht</p>
+        <h1 class="contact__title">{{ site.data.contact.company }}</h1>
+        <p class="f14 f18-sm f-grey-5 mb-2">{{ site.data.contact.location }}</p>
         <ul class="f20-sm">
-            <li class="dib"><a href="mailto:info@ziris.nl" class="contact__link">info@ziris.nl</a></li>
-            <li class="dib ml-2">06 4110 2948</li>
+            <li class="dib">
+                <a href="mailto:{{ site.data.contact.email }}" class="contact__link">
+                    {{ site.data.contact.email }}
+                </a>
+            </li>
+            <li class="dib ml-2">{{ site.data.contact.phone }}</li>
         </ul>
     </div>
 </div>
