--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ body: bg-brand
 ---
 
 <section class="intro">
-    <div class="intro__bg"></div>
+    <div class="intro__bg a a-si-left"></div>
     <div class="container intro__container">
-        <header class="intro__header">
+        <header class="intro__header a a-fi">
             <h1 class="f36 f48-sm f80-md lh-title mb-4 fw-900">
                 {{ site.data.home.intro.title }}
             </h1>
@@ -14,71 +14,75 @@ body: bg-brand
             </p>
         </header>
     </div>
-    <figure class="intro__img-container">
+    <figure class="intro__img-container a a-fi a-dur-1200">
         <div>
             <img class="intro__img" src="/assets/img/{{ site.data.home.intro.img.url }}" />
             <figcaption class="intro__figcaption">{{ site.data.home.intro.img.caption }}</figcaption>
         </div>
     </figure>
-    <div class="discover tr-750 js-discover">
+    <div class="discover tr-750 js-discover a a-fi-up-small a-del-500">
         <div class="discover__txt">{{ site.data.home.intro.discover }}</div>
         <div class="discover__line"></div>
     </div>
 </section>
 
-<section class="art">
+<section class="art js-scroll-magic" hook="0.55">
     <div class="container container--m">
         <div class="art__grid">
             <header class="section-header order-last-md">
-                <div class="thick-line hidden-xs hidden-sm"></div>
-                <h2 class="section-header__title section-header__title--small mxw-550">
+                <div class="thick-line hidden-xs hidden-sm tr-stag js-tr"></div>
+                <h2 class="section-header__title section-header__title--small mxw-550 tr-stag js-tr">
                     {{ site.data.home.art.title }}
                 </h2>
-                <p class="section-header__description mxw-700">
+                <p class="section-header__description mxw-700 tr-stag js-tr">
                     {{ site.data.home.art.subtitle }}
                 </p>
             </header>
             <div>
-                <img class="art__img" src="/assets/img/{{ site.data.home.art.img.url }}" />
+                <img class="art__img tr-stag js-tr" src="/assets/img/{{ site.data.home.art.img.url }}" />
                 <figcaption>{{ site.data.home.art.img.caption }}</figcaption>
             </div>
         </div>
     </div>
 </section>
 
-<section class="pattern">
-    <div class="container pattern__container">
-        <header class="section-header">
-            <h2 class="f32 f48-sm f72-md lh-title mb-4 fw-900">
-                {{ site.data.home.pattern.title }}
-            </h2>
-            <p class="section-header__description mxw-500 mb-6">
-                {{ site.data.home.pattern.subtitle }}
-            </p>
-            <a href="/cursussen" class="button button--l">
-                {{ site.data.home.pattern.button }}
-            </a>
-        </header>
+<section class="js-scroll-magic" hook="0.8">
+    <div class="pattern tr-stag js-tr">
+        <div class="container pattern__container">
+            <header class="section-header">
+                <h2 class="f32 f48-sm f72-md lh-title mb-4 fw-900 tr-stag js-tr">
+                    {{ site.data.home.pattern.title }}
+                </h2>
+                <p class="section-header__description mxw-500 mb-6 tr-stag js-tr">
+                    {{ site.data.home.pattern.subtitle }}
+                </p>
+                <div class="tr-stag js-tr">
+                    <a href="/cursussen" class="button button--l">
+                        {{ site.data.home.pattern.button }}
+                    </a>
+                </div>
+            </header>
+        </div>
     </div>
 </section>
 
 <section class="proof">
     <div class="container container--m">
         <div class="proof__grid">
-            <header class="section-header mxw-350">
-                <div class="thick-line hidden-xs hidden-sm"></div>
-                <h2 class="section-header__title section-header__title--small">
+            <header class="section-header mxw-350 js-scroll-magic" hook="0.9">
+                <div class="thick-line hidden-xs hidden-sm tr-stag js-tr"></div>
+                <h2 class="section-header__title section-header__title--small tr-stag js-tr">
                     {{ site.data.home.proof.title }}
                 </h2>
             </header>
             <div>
                 {% for member in site.data.members %}
-                <div class="member">
-                    <img class="member__img" src="/assets/img/{{ member.img }}.jpg" />
+                <div class="member js-scroll-magic" hook="0.8">
+                    <img class="member__img tr-stag js-tr" src="/assets/img/{{ member.img }}.jpg" />
                     <div class="member__txt">
-                        <h3 class="member__name">{{ member.name }}</h3>
-                        <p class="member__profession">{{ member.profession }}</p>
-                        <p class="member__quote">“{{ member.quote }}”</p>
+                        <h3 class="member__name tr-stag js-tr">{{ member.name }}</h3>
+                        <p class="member__profession tr-stag js-tr">{{ member.profession }}</p>
+                        <p class="member__quote tr-stag js-tr">“{{ member.quote }}”</p>
                     </div>
                 </div>
                 {% endfor %}
