adding animation to: contact / post / about

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@ no-footer: true
     <div class="map__container" id="js-map"></div>
 </div>
 
-<div class="map__controls">
+<div class="map__controls a a-fi-right">
     <div class="map__zoom js-zoom-in">
         <span class="pos-r top-min-2px">+</span>
     </div>
@@ -17,7 +17,7 @@ no-footer: true
     </div>
 </div>
 
-<div class="contact">
+<div class="contact a a-fi-left">
     <div class="contact__container">
         <h1 class="contact__title">{{ site.data.contact.company }}</h1>
         <p class="f14 f18-sm f-grey-5 mb-2">{{ site.data.contact.location }}</p>
