--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@ body: bg-brand
             <figcaption class="intro__figcaption">{{ site.data.home.intro.img.caption }}</figcaption>
         </div>
     </figure>
-    <div class="discover tr-750 js-discover a a-fi-up-small a-del-500">
-        <div class="discover__txt">{{ site.data.home.intro.discover }}</div>
-        <div class="discover__line"></div>
+    <div class="discover tr-750 js-discover">
+        <div class="a a-fi-up-small a-del-500">
+            <div class="discover__txt">{{ site.data.home.intro.discover }}</div>
+            <div class="discover__line"></div>
+        </div>
     </div>
 </section>
 
-<section class="art js-scroll-magic" hook="0.55">
+<section class="art js-scroll-magic" hook="0.6">
     <div class="container container--m">
         <div class="art__grid">
             <header class="section-header order-last-md">
@@ -46,23 +48,21 @@ body: bg-brand
     </div>
 </section>
 
-<section class="js-scroll-magic" hook="0.8">
-    <div class="pattern tr-stag js-tr">
-        <div class="container pattern__container">
-            <header class="section-header">
-                <h2 class="f32 f48-sm f72-md lh-title mb-4 fw-900 tr-stag js-tr">
-                    {{ site.data.home.pattern.title }}
-                </h2>
-                <p class="section-header__description mxw-500 mb-6 tr-stag js-tr">
-                    {{ site.data.home.pattern.subtitle }}
-                </p>
-                <div class="tr-stag js-tr">
-                    <a href="/cursussen" class="button button--l">
-                        {{ site.data.home.pattern.button }}
-                    </a>
-                </div>
-            </header>
-        </div>
+<section class="pattern js-scroll-magic tr-stag js-tr" hook="0.8">
+    <div class="container pattern__container">
+        <header class="section-header">
+            <h2 class="f32 f48-sm f72-md lh-title mb-4 fw-900 tr-stag js-tr">
+                {{ site.data.home.pattern.title }}
+            </h2>
+            <p class="section-header__description mxw-500 mb-6 tr-stag js-tr">
+                {{ site.data.home.pattern.subtitle }}
+            </p>
+            <div class="tr-stag js-tr">
+                <a href="/cursussen" class="button button--l">
+                    {{ site.data.home.pattern.button }}
+                </a>
+            </div>
+        </header>
     </div>
 </section>
 
