add all animations

--- a/bedankt.html
+++ b/bedankt.html
@@ -6,12 +6,12 @@ title: bedankt voor je inschrijving | ziris
 
 <section class="thanks">
     <div class="container container--s">
-        <header class="thanks__header">
+        <header class="thanks__header a a-fi">
             <h1 class="thanks__title">
                 Bedankt voor je inschrijving <span class="js-get-data" id="firstname"></span>!
             </h1>
         </header>
-        <p class="f20 f24-sm f-grey-4">
+        <p class="f20 f24-sm f-grey-4 a a-fi a-del-250">
             Ik ga het in orde maken. Je ontvangt een bevestigingmail op
             <span class="f-brand fw-900 js-get-data" id="email"></span>.
             Het kan zijn dat deze mail in je spambox terecht komt.
