add netlify cms

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ body: bg-brand
     </div>
     <figure class="intro__img-container a a-fi a-dur-1200">
         <div>
-            <img class="intro__img" src="{{ site.data.home.intro.img.url }}" />
-            <figcaption class="intro__figcaption">{{ site.data.home.intro.img.caption }}</figcaption>
+            <img class="intro__img" src="{{ site.data.home.intro.img }}" />
+            <figcaption class="intro__figcaption">{{ site.data.home.intro.caption }}</figcaption>
         </div>
     </figure>
     <div class="discover tr-750 js-discover">
@@ -41,8 +41,8 @@ body: bg-brand
                 </p>
             </header>
             <div>
-                <img class="art__img tr-stag js-tr" src="{{ site.data.home.art.img.url }}" />
-                <figcaption>{{ site.data.home.art.img.caption }}</figcaption>
+                <img class="art__img tr-stag js-tr" src="{{ site.data.home.art.img }}" />
+                <figcaption>{{ site.data.home.art.caption }}</figcaption>
             </div>
         </div>
     </div>
@@ -72,7 +72,7 @@ body: bg-brand
             <header class="section-header mxw-350 js-scroll-magic" hook="0.9">
                 <div class="thick-line hidden-xs hidden-sm tr-stag js-tr"></div>
                 <h2 class="section-header__title section-header__title--small tr-stag js-tr">
-                    {{ site.data.home.proof.title }}
+                    {{ site.data.home.proof }}
                 </h2>
             </header>
             <div>
