put members in home.yml

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ body: bg-brand
                 </h2>
             </header>
             <div>
-                {% for member in site.data.members %}
+                {% for member in site.data.home.proof.members %}
                 <div class="member js-scroll-magic" hook="0.8">
                     <img class="member__img tr-stag js-tr" src="{{ member.img }}" />
                     <div class="member__txt">
