--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ body: bg-brand
             <header class="section-header mxw-350 js-scroll-magic" hook="0.9">
                 <div class="thick-line hidden-xs hidden-sm tr-stag js-tr"></div>
                 <h2 class="section-header__title section-header__title--small tr-stag js-tr">
-                    {{ site.data.home.proof }}
+                    {{ site.data.home.proof.title }}
                 </h2>
             </header>
             <div>
