TDH: minor copy update | pattern__bg back

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ body: bg-brand
 </section>
 
 <section class="pattern js-scroll-magic tr-stag js-tr" hook="0.9">
+    <div class="pattern__bg"></div>
     <div class="container pattern__container">
         <header class="section-header">
             <h2 class="f32 f48-sm f72-md lh-title mb-4 fw-900 tr-stag js-tr">
