--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ body: bg-brand
     </div>
 </section>
 
-<section class="art js-scroll-magic">
+<section class="art">
     <div class="container container--m">
         <div class="art__grid">
-            <header class="section-header order-last-md">
+            <header class="section-header order-last-md js-scroll-magic">
                 <div class="thick-line hidden-xs hidden-sm tr-stag js-tr"></div>
                 <h2 class="section-header__title section-header__title--small mxw-550 tr-stag js-tr">
                     {{ site.data.home.art.title }}
@@ -40,7 +40,7 @@ body: bg-brand
                     {{ site.data.home.art.subtitle }}
                 </p>
             </header>
-            <div class="tr-stag js-tr">
+            <div class="js-scroll-magic tr-stag js-tr">
                 <img class="art__img" src="{{ site.data.home.art.img }}" />
                 <figcaption>{{ site.data.home.art.caption }}</figcaption>
             </div>
@@ -48,7 +48,7 @@ body: bg-brand
     </div>
 </section>
 
-<section class="pattern js-scroll-magic tr-stag js-tr" hook="0.92">
+<section class="pattern js-scroll-magic tr-stag js-tr">
     <div class="pattern__bg"></div>
     <div class="container pattern__container">
         <header class="section-header">
@@ -70,7 +70,7 @@ body: bg-brand
 <section class="proof">
     <div class="container container--m">
         <div class="proof__grid">
-            <header class="section-header mxw-350 js-scroll-magic" hook="0.92">
+            <header class="section-header mxw-350 js-scroll-magic">
                 <div class="thick-line hidden-xs hidden-sm tr-stag js-tr"></div>
                 <h2 class="section-header__title section-header__title--small tr-stag js-tr">
                     {{ site.data.home.proof.title }}
