update alt / aria-labels

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body: bg-brand
     </div>
     <div class="intro__img-container">
         <figure class="a a-fi a-dur-1200">
-            <img class="intro__img" src="{{ site.data.home.intro.img }}" />
+            <img class="intro__img" src="{{ site.data.home.intro.img }}" alt="{{ site.data.home.intro.caption }}" />
             <figcaption class="intro__figcaption">{{ site.data.home.intro.caption }}</figcaption>
         </figure>
     </div>
